--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -283,35 +283,57 @@
 
                         <tr>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenSGL()); ?></label><br>
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D'){?>margin-bottom: -1px;<?php } ?>"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenSGL()); ?>
+                                </label><br>
+                                <?php if( $this->pago && $objOpcProg->getMoneda() ==='D' ){?>
+                                <b style=" font-size: 13px; color : #34495e;"><?php echo Functions::formatoValor('P',$objOpcProg->getVVenSGL() * Session::get('sess_tcambio'));?></b><br>
+                                <?php }?>
                             </td>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenDBL()); ?></label><br>
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D'){?> margin-bottom: -1px; <?php } ?>"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenDBL()); ?></label>
+                                <br>
+                                <?php if($this->pago && $objOpcProg->getMoneda() ==='D'){?>
+                                <b style=" font-size: 13px; color : #34495e;"><?php echo Functions::formatoValor('P',$objOpcProg->getVVenDBL() * Session::get('sess_tcambio'));?></b><br>
+                                <?php } ?>
                             </td>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenTPL()); ?></label><br>
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D'){?> margin-bottom: -1px; <?php } ?>"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenTPL()); ?></label>
+                                <br>
+                                <?php if($this->pago && $objOpcProg->getMoneda() ==='D'){?>
+                                <b style=" font-size: 13px; color : #34495e;"><?php echo Functions::formatoValor('P',$objOpcProg->getVVenTPL() * Session::get('sess_tcambio'));?></b><br>
+                                <?php } ?>
                             </td>
 
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if ($objOpcProg->getChd1() == 0) {
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getChd1() > 0){?>margin-bottom: -1px;<?php } ?>"><?php if ($objOpcProg->getChd1() == 0) {
                                echo "--";
                            } else {
                                echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getChd1());
-                           } ?></label><br>
+                           } ?></label>
+                                <br>
+                                <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getChd1() > 0 ){?>
+                                <b style=" font-size: 13px; color : #34495e;"><?php if ($objOpcProg->getChd1() > 0) { echo Functions::formatoValor('P',$objOpcProg->getChd1() * Session::get('sess_tcambio')); } ?></b><br>
+                                <?php } ?>
                             </td>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if ($objOpcProg->getChd2() == 0) {
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getChd2() > 0){?> margin-bottom: -1px; <?php } ?>"><?php if ($objOpcProg->getChd2() == 0) {
                                echo "--";
                            } else {
                                echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getChd2());
-                           } ?></label><br>
+                               } ?></label><br>
+                               <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getChd2() > 0){?>
+                               <b style=" font-size: 13px; color : #34495e;"><?php if ($objOpcProg->getChd2() > 0) { echo Functions::formatoValor('P',$objOpcProg->getChd2() * Session::get('sess_tcambio')); } ?></b><br>
+                               <?php } ?>
                             </td>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
-                                <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if ($objOpcProg->getVVenPF() == 0) {
+                                <label style="color: #DF5F00; font-weight: bold; font-size:20px; <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getVVenPF() > 0){?> margin-bottom: -1px; <?php } ?>"><?php if ($objOpcProg->getVVenPF() == 0) {
                                echo "--";
                            } else {
                                echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenPF());
-                           } ?></label><br>
+                               } ?></label><br>
+                               <?php if($this->pago && $objOpcProg->getMoneda() ==='D' && $objOpcProg->getVVenPF() > 0 ){?>
+                               <b style=" font-size: 13px; color : #34495e;"><?php if ($objOpcProg->getVVenPF() > 0) { echo Functions::formatoValor('P',$objOpcProg->getVVenPF() * Session::get('sess_tcambio')); } ?></b><br>
+                               <?php } ?>
                             </td>
                             <td style="padding: 2px; vertical-align: middle;" align="center">
 
