--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -149,7 +149,7 @@
                                                             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width: 200px;">
                                                                 <tr>
                                                                     <td style="font-size: 12px;">
-        <?php if ($objProg->getAereo()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Aereo <?php } ?>
+                                                                        <?php if ($objProg->getAereo()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Aereo <?php } ?>
                                                                         <?php if ($objProg->getHotel()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;"> Hotel <?php } ?>
                                                                         <?php if ($objProg->getTraslado()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Traslado <?php } ?>
                                                                     </td>
@@ -157,9 +157,15 @@
 
                                                                 <tr>
                                                                     <td style="padding: 2px; vertical-align: middle;" align="center">
-                                                                        <label style="color: #DF5F00; font-weight: bold; font-size:30px;"><?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getValorDesde()); ?></label><br>
-                                                                        <a data-toggle="modal" href="#myModal" class="btn btn-success btn-sm" style="width: 88px;" onclick="fadeOut('detallePopup');
-                                                                                    Programa.prototype.procesoDetalleProg('frmPrograma_<?php echo $cntProg; ?>', '<?php echo $this->form; ?>');">DETALLE</a>
+                                                                        <label style="color: #DF5F00; font-weight: bold; font-size:30px; <?php if($this->pago && $objProg->getMoneda() ==='D'){?>margin-bottom: -1px;<?php } ?>">
+                                                                            <?php echo Functions::formatoValor($objProg->getMoneda(), $objProg->getValorDesde()); ?></label><br>
+                                                                            
+                                                                        <?php if ($this->pago && $objProg->getMoneda() === 'D') { ?>
+                                                                            <b style=" font-size: 14px; color : #34495e;"><?php echo Functions::formatoValor('P', $objProg->getValorDesde() * Session::get('sess_tcambio')); ?></b><br>
+                                                                        <?php } ?>
+
+                                                                        <a data-toggle="modal" href="#myModal" class="btn btn-success btn-sm" style="width: 88px; <?php if($this->pago && $objProg->getMoneda() ==='D'){?> margin-top: 3px; <?php } ?>" onclick="fadeOut('detallePopup');
+                                                                                        Programa.prototype.procesoDetalleProg('frmPrograma_<?php echo $cntProg; ?>', '<?php echo $this->form; ?>');">DETALLE</a>
                                                                         <br>
                                                                         <label style="font-size: 10px;">Valores desde por persona en base a habitaci&oacute;n doble</label>
                                                                     </td>
@@ -183,23 +189,26 @@
                             </div>
                             <input type="hidden" name="__SP_id__" value="<?php echo $objProg->getId(); ?>" >
                         </form>
-    <?php }
-} else {
-    ?>
+                    <?php
+                    }
+                } else {
+                    ?>
                     <div id="divAlertWarHot" class="alert alert-dismissable alert-warning" style="display:block;">
                         No se encontraron registros para esta busqueda.
                     </div>
 <?php } ?>
 
             </div>
-            <div class="modal-content alert-info" id="LoginStatus" style="position: fixed; left: 1%; top:90%; bottom: 5%; right: 210px; z-index: 9999;width: 160px; height: 65px; <?php if (!Session::get('Autenticado') || $this->form === 'a' || $this->form === '') {
-    echo 'display: none;';
-} ?>">
+            <div class="modal-content alert-info" id="LoginStatus" style="position: fixed; left: 1%; top:90%; bottom: 5%; right: 210px; z-index: 9999;width: 160px; height: 65px; <?php
+                 if (!Session::get('Autenticado') || $this->form === 'a' || $this->form === '') {
+                     echo 'display: none;';
+                 }
+                 ?>">
                 <div class="modal-body" id="divLoginStatusIn" style="max-height: 400px; padding-top: 8px;">
                     <table>
                         <tr><td>Usuario :</td><td><?php echo Session::get('sess_clave_usuario'); ?></td></tr>
                         <tr><td>Perfil : </td><td><?php echo Session::get('level'); ?></td></tr>
-                        <!--<tr><td>Cerrar :</td><td><a href="<?php //echo BASE_URL . 'system/salir'  ?>" class="text-right">Cerrar sesi&oacute;n</a></td></tr>-->
+                        <!--<tr><td>Cerrar :</td><td><a href="<?php //echo BASE_URL . 'system/salir'   ?>" class="text-right">Cerrar sesi&oacute;n</a></td></tr>-->
                     </table>               
                 </div>
 
