--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -148,11 +148,18 @@
                                                         <td>
                                                             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width: 200px;">
                                                                 <tr>
-                                                                    <td style="font-size: 12px;">
+                                                                    <!--<td style="font-size: 12px;">
                                                                         <?php if ($objProg->getAereo()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Aereo <?php } ?>
                                                                         <?php if ($objProg->getHotel()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;"> Hotel <?php } ?>
                                                                         <?php if ($objProg->getTraslado()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Traslado <?php } ?>
-                                                                    </td>
+                                                                    </td>-->
+                                                                        <td style="font-size: 12px;">
+                                                                            <?php if ($objProg->getPdaereo()) { ?><img name="tooltip_blo" src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" title="Aereo"><?php } ?>
+                                                                            <?php if ($objProg->getPbhotel()) { ?><img name="tooltip_blo" src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" title="Hotel">  <?php } ?>
+                                                                            <?php if ($objProg->getPdtraslados()) { ?><img name="tooltip_blo" src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" title="Traslado">  <?php } ?>
+                                                                            <?php if ($objProg->getPdplana()) { ?><img name="tooltip_blo" src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" title="<?php echo $objProg->getPdplana();?>">  <?php } ?>
+                                                                            <?php if ($objProg->getPdseguro()) { ?><img name="tooltip_blo" src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" title="Seguro">  <?php } ?>
+                                                                        </td>
                                                                 </tr>
 
                                                                 <tr>
@@ -226,6 +233,7 @@
                 width: '70%'
             });
         });
-
+        
+        $("[name$='tooltip_blo']").poshytip({className: "tip-darkgray", alignY: "top"});
     });
 </script>
