se agregan iconos en la parte de programas, se agregan los checkbox en la parte de admin

--- a/views/programas/adminProgramas.phtml
+++ b/views/programas/adminProgramas.phtml
@@ -194,3 +194,11 @@
         </div> <!-- container -->
     </div> <!--wrap -->
 </div> <!-- page-content -->
+<script>
+$(document).ready(function(){
+    $('#myModal').on('hidden.bs.modal', function (e) {
+  tinyMCE.triggerSave();
+});
+    
+});
+</script>
